--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
     "babylonjs": "^4.2.0",
+    "babylonjs-gui": "^4.2.0",
+    "babylonjs-loaders": "^4.2.0",
     "lodash": "^4.17.15",
     "normalize.css": "^8.0.1"
   }
